Use PathFinder to find path for StudentData.csv and StudentGroupData.csv in Application