@@ -3,36 +3,48 @@ import model.student.Gender;
 import model.student.Student;
 import model.student.TypeOfContract;
 import model.student.TypeOfStudying;
+import util.finder.PathFinder;
 import util.parser.CSVParser;
 import util.reader.FileReader;
 
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class Application {
 
     public static void main(String[] args){
-        Path current = Path.of(".");
+
+        List<String> studentDataPaths = new LinkedList<>();
+        PathFinder.findByName("StudentData.csv"
+                , new File("src"), studentDataPaths);
+        String studentDataPath = studentDataPaths.get(0);
+
+        List<String> groupDataPaths = new LinkedList<>();
+        PathFinder.findByName("StudentGroupData.csv"
+                , new File("src"), groupDataPaths);
+        String groupDataPath = groupDataPaths.get(0);
 
         System.out.println("Students:");
-        List<Student> studentList = receiveListOfStudents(current.toString() + "/src/data/StudentData.csv");
+        List<Student> studentList = receiveListOfStudents(studentDataPath);
         studentList.stream().forEach(student -> System.out.println(student.toString()));
 
         System.out.println("Groups:");
-        List<Group> groupList = receiveListOfGroups(current.toString() + "/src/data/StudentGroupData.csv");
+        List<Group> groupList = receiveListOfGroups(groupDataPath);
         groupList.stream().forEach(group -> System.out.println(group.toString()));
 
         List<Student> studentsToAdd = new ArrayList<>();
         studentsToAdd.add(new Student().setId(13).setName("Rubel").setSurname("Bare").setGender(Gender.MALE)
                 .setBirthDate(LocalDate.of(1998,2,15)).setCitizenship("German").setPlaceOfBirth("Bremen")
                 .setTypeOfContract(TypeOfContract.PAYABLE).setGroupId(0).setTypeOfStudying(TypeOfStudying.PRESENT).setContactInformation("rubel.bare@gmail.com"));
-        addStudents(studentsToAdd,studentList,current.toString() + "/src/data/StudentData.csv");
+        addStudents(studentsToAdd,studentList,studentDataPath);
 
         //TODO find what to do with new abbreviations
         /*List<String> groupsToAdd = new ArrayList<>();
